--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '0.0-17' %}
+{% set version = '0.0-18' %}
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -10,20 +10,21 @@ source:
   url:
     - {{ cran_mirror }}/src/contrib/Iso_{{ version }}.tar.gz
     - {{ cran_mirror }}/src/contrib/Archive/Iso/Iso_{{ version }}.tar.gz
-  sha256: c007d6eaf6335a15c1912b0804276ff39abce27b7a61539a91b8fda653629252
+  sha256: 2d7e8c4452653364ee086d95cea620c50378e30acfcff129b7261e1756a99504
 
 build:
   merge_build_host: True  # [win]
-  number: 1000
+  number: 0
   rpaths:
     - lib/R/lib/
     - lib/
 
 requirements:
   build:
-    - {{ compiler('c') }}        # [not win]
-    - {{ compiler('fortran') }}  # [not win]
-    - {{native}}toolchain        # [win]
+    - {{ compiler('c') }}              # [not win]
+    - {{ compiler('m2w64_c') }}        # [win]
+    - {{ compiler('fortran') }}        # [not win]
+    - {{ compiler('m2w64_fortran') }}  # [win]
     - {{posix}}filesystem        # [win]
     - {{posix}}make
     - {{posix}}sed               # [win]
@@ -46,13 +47,24 @@ about:
   summary: Linear order and unimodal order (univariate) isotonic regression; bivariate isotonic
     regression with linear order on both variables.
   license_family: GPL3
-  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2'
 
 extra:
   recipe-maintainers:
-    - johanneskoester
-    - bgruening
-    - daler
-    - jdblischak
-    - cbrueffer
-    - dbast
+    - conda-forge/r
+
+# Package: Iso
+# Version: 0.0-18
+# Date: 2019-06-05
+# Title: Functions to Perform Isotonic Regression
+# Author: Rolf Turner <r.turner@auckland.ac.nz>
+# Maintainer: Rolf Turner <r.turner@auckland.ac.nz>
+# Depends: R (>= 1.7.0)
+# Description: Linear order and unimodal order (univariate) isotonic regression; bivariate isotonic regression with linear order on both variables.
+# LazyData: true
+# License: GPL (>= 2)
+# URL: http://www.stat.auckland.ac.nz/~rolf/
+# NeedsCompilation: yes
+# Packaged: 2019-06-04 22:15:06 UTC; rolf
+# Repository: CRAN
+# Date/Publication: 2019-06-05 04:40:03 UTC
