--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -43,9 +43,9 @@ test:
 
 about:
   home: http://www.stat.auckland.ac.nz/~rolf/
-  license: GPL (>= 2)
+  license: GPL-2.0-or-later
   summary: Linear order and unimodal order (univariate) isotonic regression; bivariate isotonic regression with linear order on both variables.
-  license_family: GPL3
+  license_family: GPL2
   license_file: {{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2
 
 extra:
